[package]
    name         = "mate_selection"
    version      = "0.1.2"
    edition      = "2021"
    description  = "A collection of mate selection methods for evolutionary algorithms"
    categories   = ["algorithms"]
    keywords     = ["random", "sampling"]
    authors      = ["David McDougall <dam1784@rit.edu>"]
    license      = "MIT-0"
    repository   = "https://github.com/D-McDougall/mate_selection.git"

[lib]
    doctest = false
    crate-type = ["cdylib", "rlib"]

[dependencies]
    pyo3 = { version = ">= 0.22", features = ["extension-module"], optional=true }
    rand = "0.10"
    serde = { version = "1", features = ["derive"] }
    stochastic_universal_sampling = "1"
